--- a/portfolio/work6/index.html
+++ b/portfolio/work6/index.html
@@ -104,7 +104,9 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>The Nature Conservancy - Grassland and Stream Surveys</h1>
-         <p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
+         <p>This is a poster summing up my summer spent with The Nature Conservancy.</p>
+
+<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
 
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
