--- a/portfolio/work11/index.html
+++ b/portfolio/work11/index.html
@@ -114,7 +114,7 @@
 
 <p><img src="/img/portfolio/Solar.jpg" alt="Solar" /></p>
 
-<p><img src="/img/portfolio/Solar.jpg" alt="Combined" /></p>
+<p><img src="/img/portfolio/Combined.jpg" alt="Combined" /></p>
 
 <ol>
 <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
