--- a/portfolio/work9/index.html
+++ b/portfolio/work9/index.html
@@ -110,7 +110,7 @@
 
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
-<p><img src="/img/portfolio/Twitter_Mayors_Final.html" alt="Mayors" /></p>
+<h2 id="https-hmccarth-github-io-msp-mayors"><strong><em><a href="https://hmccarth.github.io/MSP-Mayors/">https://hmccarth.github.io/MSP-Mayors/</a></em></strong></h2>
 
 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
