--- a/portfolio/work2/index.html
+++ b/portfolio/work2/index.html
@@ -106,6 +106,8 @@
          <h1>Brochure Building: Toson Hulstai Nature Preserve</h1>
          <p>In Fall 2017, I had the wonderful opportunity to study abroad in Mongolia. While living in the country&rsquo;s capital, Ulaanbaatar, I worked as an intern for The Nature Conservancy. During my internship I created and updated GIS files, proofread conservation reports, and created a National Parks style brochure for TNC Mongolia&rsquo;s anchor site.</p>
 
+<p><strong>Under Construction</strong></p>
+
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
