--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -104,7 +104,9 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Dengue Risk Assessment on the Island of Hawaii</h1>
-         <p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
+         <p><strong>Under Construction</strong></p>
+
+<p><strong>Under Construction</strong></p>
 
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
