--- a/portfolio/work6/index.html
+++ b/portfolio/work6/index.html
@@ -106,13 +106,13 @@
          <h1>The Nature Conservancy - Grassland and Stream Surveys</h1>
          <p>This is a poster summing up my summer spent with The Nature Conservancy.</p>
 
-<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
+<p><strong>Under Construction</strong></p>
 
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
-<p><img src="/img/portfolio/TNC_Summer.jpg" alt="TNC_Summer" /></p>
+<p><img src="/img/portfolio/TNC_Summer.jpg" alt="poster" /></p>
 
 <ol>
 <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
