--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -106,6 +106,8 @@
          <h1>Doodles Revisited: Getting to Know the Wacom Intuos Graphics Tablet</h1>
          <p>This is a fun side project I recently started working on as a way to learn how to use a Wacom graphics tablet.</p>
 
+<p><strong>Under Construction</strong></p>
+
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
