--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -104,7 +104,11 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Brushing Up and Starting Fresh: Esri Story Maps, Digital Illustration, and Fire Ecology</h1>
-         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+         <p><strong>Under Construction</strong></p>
+
+<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+
+<p><strong>Under Construction</strong></p>
 
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
