--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -112,58 +112,58 @@
 
 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
-<p><img src="/img/portfolio/drawings/D1.jpg" alt="d1" />
+<p><img src="/img/portfolio/drawings/D1a.png" alt="d1" />
 <img src="/img/portfolio/drawings/D1b.jpg" alt="d1b" /></p>
 
-<p><img src="/img/portfolio/drawings/D2.jpg" alt="d2" />
+<p><img src="/img/portfolio/drawings/D2a.png" alt="d2" />
 <img src="/img/portfolio/drawings/D2b.jpg" alt="d2b" /></p>
 
-<p><img src="/img/portfolio/drawings/D3.jpg" alt="d3" />
+<p><img src="/img/portfolio/drawings/D3a.png" alt="d3" />
 <img src="/img/portfolio/drawings/D3b.jpg" alt="d3b" /></p>
 
-<p><img src="/img/portfolio/drawings/D4.jpg" alt="d4" />
+<p><img src="/img/portfolio/drawings/D4a.png" alt="d4" />
 <img src="/img/portfolio/drawings/D4b.jpg" alt="d4b" /></p>
 
-<p><img src="/img/portfolio/drawings/D5.jpg" alt="d5" />
+<p><img src="/img/portfolio/drawings/D5a.png" alt="d5" />
 <img src="/img/portfolio/drawings/D5b.jpg" alt="d5b" /></p>
 
-<p><img src="/img/portfolio/drawings/D6.jpg" alt="d6" />
+<p><img src="/img/portfolio/drawings/D6a.png" alt="d6" />
 <img src="/img/portfolio/drawings/D6b.jpg" alt="d6b" /></p>
 
-<p><img src="/img/portfolio/drawings/D7.jpg" alt="d7" />
+<p><img src="/img/portfolio/drawings/D7a.png" alt="d7" />
 <img src="/img/portfolio/drawings/D7b.jpg" alt="d7b" /></p>
 
-<p><img src="/img/portfolio/drawings/D8.jpg" alt="d8" />
+<p><img src="/img/portfolio/drawings/D8a.png" alt="d8" />
 <img src="/img/portfolio/drawings/D8b.jpg" alt="d8b" /></p>
 
-<p><img src="/img/portfolio/drawings/D9.jpg" alt="d9" />
+<p><img src="/img/portfolio/drawings/D9a.png" alt="d9" />
 <img src="/img/portfolio/drawings/D9b.jpg" alt="d9b" /></p>
 
-<p><img src="/img/portfolio/drawings/D10.jpg" alt="d10" />
+<p><img src="/img/portfolio/drawings/D10a.png" alt="d10" />
 <img src="/img/portfolio/drawings/D10b.jpg" alt="d10b" /></p>
 
-<p><img src="/img/portfolio/drawings/D11.jpg" alt="d11" />
+<p><img src="/img/portfolio/drawings/D11a.png" alt="d11" />
 <img src="/img/portfolio/drawings/D11b.jpg" alt="d11b" /></p>
 
-<p><img src="/img/portfolio/drawings/D12.jpg" alt="d12" />
+<p><img src="/img/portfolio/drawings/D12a.png" alt="d12" />
 <img src="/img/portfolio/drawings/D12b.jpg" alt="d12b" /></p>
 
-<p><img src="/img/portfolio/drawings/D13.jpg" alt="d13" />
+<p><img src="/img/portfolio/drawings/D13a.png" alt="d13" />
 <img src="/img/portfolio/drawings/D13b.jpg" alt="d13b" /></p>
 
-<p><img src="/img/portfolio/drawings/D14.jpg" alt="d14" />
+<p><img src="/img/portfolio/drawings/D14a.png" alt="d14" />
 <img src="/img/portfolio/drawings/D14b.jpg" alt="d14b" /></p>
 
-<p><img src="/img/portfolio/drawings/D15.jpg" alt="d15" />
+<p><img src="/img/portfolio/drawings/D15a.png" alt="d15" />
 <img src="/img/portfolio/drawings/D15b.jpg" alt="d15b" /></p>
 
-<p><img src="/img/portfolio/drawings/D16.jpg" alt="d16" />
+<p><img src="/img/portfolio/drawings/D16a.png" alt="d16" />
 <img src="/img/portfolio/drawings/D16b.jpg" alt="d16b" /></p>
 
-<p><img src="/img/portfolio/drawings/D17.jpg" alt="d17" />
+<p><img src="/img/portfolio/drawings/D17a.png" alt="d17" />
 <img src="/img/portfolio/drawings/D17b.jpg" alt="d17b" /></p>
 
-<p><img src="/img/portfolio/drawings/D18.jpg" alt="d18" />
+<p><img src="/img/portfolio/drawings/D18a.png" alt="d18" />
 <img src="/img/portfolio/drawings/D18b.jpg" alt="d18b" /></p>
 
 <ol>
