--- a/portfolio/work2/index.html
+++ b/portfolio/work2/index.html
@@ -125,11 +125,9 @@
 <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
 </blockquote>
 
-<h2 id="also-in-mongolia-ger-community-mapping-center">(Also in Mongolia&hellip;) Ger Community Mapping Center</h2>
+<h2 id="change-title">Change title</h2>
 
 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p><img src="/img/portfolio/GCMC_infographic_specific.png" alt="Infographic" /></p>
 
 <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
 
