--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Doodles Revisited: Getting to Know the Wacom Intuos Graphics Tablet</title>
+<title>Getting Sentimental: An Analysis of Twin Cities Tweets and Headlines</title>
 <meta name="description" content="Henry McCarthy&#39;s Creative Portfolio">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -103,68 +103,18 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Doodles Revisited: Getting to Know the Wacom Intuos Graphics Tablet</h1>
-         <p>This is a fun side project I recently started working on as a way to learn how to use a Wacom graphics tablet.</p>
+         <h1>Getting Sentimental: An Analysis of Twin Cities Tweets and Headlines</h1>
+         <p>This is a final project I worked on for Intro to Data Science.</p>
 
 <p><strong>Under Construction</strong></p>
 
+<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
+<h2 id="https-hmccarth-github-io-msp-mayors"><strong><em><a href="https://hmccarth.github.io/MSP-Mayors/">https://hmccarth.github.io/MSP-Mayors/</a></em></strong></h2>
+
 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
-<p><img src="/img/portfolio/drawings/D1a.png" alt="d1" />
-<img src="/img/portfolio/drawings/D1b.jpg" alt="d1b" /></p>
-
-<p><img src="/img/portfolio/drawings/D2a.png" alt="d2" />
-<img src="/img/portfolio/drawings/D2b.jpg" alt="d2b" /></p>
-
-<p><img src="/img/portfolio/drawings/D3a.png" alt="d3" />
-<img src="/img/portfolio/drawings/D3b.jpg" alt="d3b" /></p>
-
-<p><img src="/img/portfolio/drawings/D4a.png" alt="d4" />
-<img src="/img/portfolio/drawings/D4b.jpg" alt="d4b" /></p>
-
-<p><img src="/img/portfolio/drawings/D5a.png" alt="d5" />
-<img src="/img/portfolio/drawings/D5b.jpg" alt="d5b" /></p>
-
-<p><img src="/img/portfolio/drawings/D6a.png" alt="d6" />
-<img src="/img/portfolio/drawings/D6b.jpg" alt="d6b" /></p>
-
-<p><img src="/img/portfolio/drawings/D7a.png" alt="d7" />
-<img src="/img/portfolio/drawings/D7b.jpg" alt="d7b" /></p>
-
-<p><img src="/img/portfolio/drawings/D8a.png" alt="d8" />
-<img src="/img/portfolio/drawings/D8b.jpg" alt="d8b" /></p>
-
-<p><img src="/img/portfolio/drawings/D9a.png" alt="d9" />
-<img src="/img/portfolio/drawings/D9b.jpg" alt="d9b" /></p>
-
-<p><img src="/img/portfolio/drawings/D10a.png" alt="d10" />
-<img src="/img/portfolio/drawings/D10b.jpg" alt="d10b" /></p>
-
-<p><img src="/img/portfolio/drawings/D11a.png" alt="d11" />
-<img src="/img/portfolio/drawings/D11b.jpg" alt="d11b" /></p>
-
-<p><img src="/img/portfolio/drawings/D12a.png" alt="d12" />
-<img src="/img/portfolio/drawings/D12b.jpg" alt="d12b" /></p>
-
-<p><img src="/img/portfolio/drawings/D13a.png" alt="d13" />
-<img src="/img/portfolio/drawings/D13b.jpg" alt="d13b" /></p>
-
-<p><img src="/img/portfolio/drawings/D14a.png" alt="d14" />
-<img src="/img/portfolio/drawings/D14b.jpg" alt="d14b" /></p>
-
-<p><img src="/img/portfolio/drawings/D15a.png" alt="d15" />
-<img src="/img/portfolio/drawings/D15b.jpg" alt="d15b" /></p>
-
-<p><img src="/img/portfolio/drawings/D16a.png" alt="d16" />
-<img src="/img/portfolio/drawings/D16b.jpg" alt="d16b" /></p>
-
-<p><img src="/img/portfolio/drawings/D17a.png" alt="d17" />
-<img src="/img/portfolio/drawings/D17b.jpg" alt="d17b" /></p>
-
-<p><img src="/img/portfolio/drawings/D18a.png" alt="d18" />
-<img src="/img/portfolio/drawings/D18b.jpg" alt="d18b" /></p>
 
 <ol>
 <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
