--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Brushing Up and Starting Fresh: Esri Story Maps, Digital Illustration, and Fire Ecology</title>
+<title>Brushing Up and Starting Fresh: Esri Story Maps, Adobe Animate, and Fire Ecology</title>
 <meta name="description" content="Henry McCarthy&#39;s Creative Portfolio">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -103,7 +103,7 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Brushing Up and Starting Fresh: Esri Story Maps, Digital Illustration, and Fire Ecology</h1>
+         <h1>Brushing Up and Starting Fresh: Esri Story Maps, Adobe Animate, and Fire Ecology</h1>
          <p>In my Advanced Cartography and Geovisualization class this past semester I was tasked with creating a dynamic visualization using a new or somewhat unfamiliar platform. Interested in learning about animation in Adobe, I decided to create a series of short animations to illustrate concepts in fire ecology (a field that I have long been curious about but have not studied in detail). Wanting to stay up to date with Esri Story Maps, I decided to use this as a platform to host my animations.</p>
 
 <p><strong>Under Construction</strong></p>
