--- a/portfolio/work11/index.html
+++ b/portfolio/work11/index.html
@@ -104,7 +104,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Freelance</h1>
-         <p>In addition to class assignments and professional projects, I have done some work as a freelance cartographer and graphic designer for consultants, independent businesses, and professors publishing articles. I am always happy to take on new projects so feel free to get in contact with me!</p>
+         <p>In addition to class assignments and professional projects, I have done some work as a freelance cartographer and graphic designer for consultants, independent businesses, and professors. I am always happy to take on new projects so feel free to get in contact with me!</p>
 
 <p><strong>Under Construction</strong></p>
 
