--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -242,7 +242,10 @@
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>This past summer I had an exciting internship with The Nature Conservancy which allowed me to pursue my environmental and GIS interests while gaining valuable field experience.</p>
+                                  This past summer I had an exciting internship with The Nature Conservancy which allowed me to pursue my environmental and GIS interests while gaining valuable field experience.
+Under Construction
+Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+A small river named Duden flows by their place and supplies it with the necessary regelialia.
                                 
                             </p>
                           </div>
