--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -341,7 +341,7 @@ A small river named Duden flows by their place and supplies it with the necessar
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>In addition to class assignments and professional projects, I have done some work as a freelance cartographer and graphic designer for consultants, independent businesses, and professors. I am always happy to take on new projects so feel free to get in contact with me!</p>
+                                  <p>In addition to class projects and internships, I have done some work as a freelance cartographer and graphic designer for consultants, independent businesses, and professors. I am always eager to take on new projects so feel free to get in touch!</p>
                                 
                             </p>
                           </div>
