--- a/about/index.html
+++ b/about/index.html
@@ -111,9 +111,11 @@
 
 <p><strong>Under Construction</strong></p>
 
-<p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
+<p>Hi there! My name is Henry McCarthy and I&rsquo;m a senior at Macalester College majoring in Geography and minoring in Data Science and Environmental Studies. I&rsquo;m originally from San Diego, California but for the past few years I&rsquo;ve been based out of St. Paul, Minnesota while I complete my undergraduate degree. I&rsquo;ve thoroughly enjoyed exploring the Twin Cities during my time at Macalester, and to the surprise of friends and family in California, I&rsquo;ve also enjoyed the long Minnesota winters.</p>
 
-<p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing cottage she norland letters equally prepare too. Replied exposed savings he no viewing as up. Soon body add him hill. No father living really people estate if. Mistake do produce beloved demesne if am pursuit.</p>
+<p>My academic interests seem to change with just about every class I take, but for the past few years I&rsquo;ve honed in on the environmental side of geography and have worked to develop my technical skills in GIS and data science. While my academic and professional endeavors have taken me to one of the most rural countries in the world, Mongolia, I also remain passionate about environmental issues in urban centers. I am excited about urban ecology and sustainable city planning and I&rsquo;m eager to explore new cities in the United States and beyond.</p>
+
+<p>Cartography and design are two of my greatest passions and I hope to find a career path that allows me to blend my interest and experience in data and environmental sciences with my attention to aesthetics and visualizations. I have been fortunate enough to have academic and professional experiences that have allowed me to practice my cartography and design skills while also gaining wonderful experience in the sciences.</p>
 
 <p><img src="/img/mestand.jpg" alt="This is me" /></p>
 
