text changes all

--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -106,35 +106,15 @@
          <h1>Dengue Risk Assessment on the Island of Hawaii</h1>
          <p>Macalester College / Advanced Geospatial Analysis / Spring 2018</p>
 
-<p><strong>Under Construction</strong></p>
+<p>Last spring I was part of a class that set out to create a risk model of dengue fever on the Island of Hawai&rsquo;i. Following the methods of existing scholarship on the dengue outbreak in Hawai&rsquo;i during the early 2000s, our class created a model for mosquito/vector habitat based on the 2015-2016 outbreak.</p>
 
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+<p>This exercise in model building was extremely informative for us as a class and for me individually. This semester-long project saw us navigate a project from its early stages to a final, presentable format. I enjoy this style of class because it lets students work on many aspects of a single project &ndash; in my case, I worked on collecting climate data towards the beginning of the semester and on the design team towards the end.</p>
 
 <h2 id="https-www-arcgis-com-home-item-html-id-cf9af8fc89244e27aef0e188937ec733"><strong><em><a href="https://www.arcgis.com/home/item.html?id=cf9af8fc89244e27aef0e188937ec733">https://www.arcgis.com/home/item.html?id=cf9af8fc89244e27aef0e188937ec733</a></em></strong></h2>
 
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+<p><em>Below is our final mosquito habitat model:</em></p>
 
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
-
-<blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-</blockquote>
-
-<h2 id="header-level-2">Header Level 2</h2>
-
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+<p><img src="/img/portfolio/HawaiiGIS.png" alt="ModelMap" /></p>
          
       </div>
     </div>
