--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -106,35 +106,11 @@
          <h1>Brushing Up and Starting Fresh: Esri Story Maps, Adobe Animate, and Fire Ecology</h1>
          <p>In my Advanced Cartography and Geovisualization class this past semester I was tasked with creating a dynamic visualization using a new or somewhat unfamiliar platform. Interested in learning about animation in Adobe, I decided to create a series of short animations to illustrate concepts in fire ecology (a field that I have long been curious about but have not studied in detail). Wanting to stay up to date with Esri Story Maps, I decided to use this as a platform to host my animations.</p>
 
-<p><strong>Under Construction</strong></p>
-
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-<h2 id="https-macgis-maps-arcgis-com-apps-cascade-index-html-appid-3b3cb0e9190a4952ab310e80eaaf42a6"><strong><em><a href="https://macgis.maps.arcgis.com/apps/Cascade/index.html?appid=3b3cb0e9190a4952ab310e80eaaf42a6">https://macgis.maps.arcgis.com/apps/Cascade/index.html?appid=3b3cb0e9190a4952ab310e80eaaf42a6</a></em></strong></h2>
-
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
+<p>Below is the link to my final dynamic visualization submission. I am proud of the progress I made using Adobe Animate and I&rsquo;m excited to use this skill for future projects both academic and professional. In particular, I would like to revisit animated cartography and see how I could expand beyond my 2018 California wildfires map.</p>
 
 <blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+<h2 id="https-macgis-maps-arcgis-com-apps-cascade-index-html-appid-3b3cb0e9190a4952ab310e80eaaf42a6"><em><a href="https://macgis.maps.arcgis.com/apps/Cascade/index.html?appid=3b3cb0e9190a4952ab310e80eaaf42a6">https://macgis.maps.arcgis.com/apps/Cascade/index.html?appid=3b3cb0e9190a4952ab310e80eaaf42a6</a></em></h2>
 </blockquote>
-
-<h2 id="header-level-2">Header Level 2</h2>
-
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
          
       </div>
     </div>
