--- a/portfolio/work12/index.html
+++ b/portfolio/work12/index.html
@@ -106,35 +106,17 @@
          <h1>Sustainable Development Goals in Mongolia</h1>
          <p>While I was studying abroad in Mongolia I had the chance to complete a rapid-fire, three-day externship with a local non-profit called the Ger Community Mapping Center (GCMC). At GCMC I created an infographic highlighting UN Sustainable Development Goals as they pertain to Mongolia&rsquo;s capital.</p>
 
-<p><strong>Under Construction</strong></p>
-
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+<p>The Ger Community Mapping Center is an organization based in Ulaanbaatar, Mongolia that works towards positive changemaking in the city&rsquo;s &ldquo;ger districts&rdquo; (the word &ldquo;ger&rdquo; means &ldquo;yurt&rdquo; in Mongolian). Mongolia&rsquo;s ger districts, characterized as &ldquo;slums&rdquo; by international media and aid organizations, make up more than half of Ulaanbaatar&rsquo;s area and house more than half the city&rsquo;s population.</p>
 
 <p><img src="/img/portfolio/GCMC_infographic_specific.png" alt="infographic" /></p>
 
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
+<p>&ndash;</p>
+
+<p>For more information, you can check out the GCMC website or get in touch with me (after loving my study abroad experience, I decided to write my senior capstone in geography on rural to urban migration in Mongolia).</p>
 
 <blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+<h2 id="https-www-germapcenter-org"><em><a href="https://www.germapcenter.org">https://www.germapcenter.org</a></em></h2>
 </blockquote>
-
-<h2 id="header-level-2">Header Level 2</h2>
-
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
          
       </div>
     </div>
