--- a/portfolio/work2/index.html
+++ b/portfolio/work2/index.html
@@ -106,37 +106,11 @@
          <h1>Brochure Building: Toson Hulstai Nature Preserve</h1>
          <p>In Fall 2017, I had the wonderful opportunity to study abroad in Mongolia. While living in the country&rsquo;s capital, Ulaanbaatar, I worked as an intern for The Nature Conservancy. During my internship I created and updated GIS files, proofread conservation reports, and created a National Parks style brochure for TNC Mongolia&rsquo;s anchor site.</p>
 
-<p><strong>Under Construction</strong></p>
-
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+<p>This brochure was made using <strong>Adobe InDesign</strong>, <strong>Adobe Illustrator</strong>, and <strong>ArcMap</strong>. Photos and illustrations were sourced from TNC Mongolia.</p>
 
 <p><img src="/img/portfolio/Brochure_Final_22.jpg" alt="Brochure" /></p>
 
 <p><img src="/img/portfolio/Brochure_Final_2.jpg" alt="Brochure2" /></p>
-
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
-
-<blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-</blockquote>
-
-<h2 id="change-title">Change title</h2>
-
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
          
       </div>
     </div>
