--- a/portfolio/work3/index.html
+++ b/portfolio/work3/index.html
@@ -104,37 +104,13 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>A Bagpiper&#39;s Guide to the US: Exploring Spatial and Gender Patterns in the Pipe Band Community</h1>
-         <p><strong>Under Construction</strong></p>
-
-<p><strong>Under Construction</strong></p>
-
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+         <p>I have been playing bagpipes for upwards of ten years and I have often found that when I talk to non-piping friends about my experience playing in a pipe band, they are usually surprised that a pipe band has more than just bagpipers in it. Following countless conversations in the same vein and wanting to put numbers to demographic disparities I have noticed in the pipe band community over the past few years, I decided to create a visualization.</p>
 
 <p><img src="/img/portfolio/PipeBands.jpg" alt="Bagpipes" /></p>
 
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
+<p>I created this visualization in Adobe InDesign and incorporated graphics, charts, and a map from a variety of platforms and data sources. I designed the graphics for this visualization in Adobe Illustrator, created the pipe band map using ESRI’s ArcMap, used RAWGraphs and Adobe Illustrator to make and reorganize the bubble chart, and created the stacked bar plot in RStudio.</p>
 
-<blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-</blockquote>
-
-<h2 id="header-level-2">Header Level 2</h2>
-
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+<p>Prior to making this visualization, I had little to no experience using RAWGraphs or RStudio. Making this layout has sharpened my data collection, data wrangling, analysis, and design skills.</p>
          
       </div>
     </div>
