--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -106,35 +106,12 @@
          <h1>Getting Sentimental: An Analysis of Twin Cities Tweets and Headlines</h1>
          <p>As a final project for my Intro to Data Science course I worked with four other students to analyze tweets and news headlines that mention Mayors Melvin Carter and Jacob Frey of St. Paul and Minneapolis, respectively. This was an exciting project that allowed me to expand my data wrangling and visualization skills using RStudio.</p>
 
-<p><strong>Under Construction</strong></p>
-
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-<h2 id="https-hmccarth-github-io-msp-mayors"><strong><em><a href="https://hmccarth.github.io/MSP-Mayors/">https://hmccarth.github.io/MSP-Mayors/</a></em></strong></h2>
-
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
+<p>Below is the link to our final project submission. I worked primarily on Star Tribune headline wordclouds and barcharts, tf-idf analysis of Star Tribune and Twitter data,
+mayoral mentions word clouds, and establishing a consistent color scheme and style throughout.</p>
 
 <blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+<h2 id="https-hmccarth-github-io-msp-mayors"><em><a href="https://hmccarth.github.io/MSP-Mayors/">https://hmccarth.github.io/MSP-Mayors/</a></em></h2>
 </blockquote>
-
-<h2 id="header-level-2">Header Level 2</h2>
-
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
          
       </div>
     </div>
