--- a/portfolio/work9.utf8/index.html
+++ b/portfolio/work9.utf8/index.html
@@ -106,9 +106,9 @@
          <h1>Doodles Revisited: Getting to Know the Wacom Intuos Graphics Tablet</h1>
          <p>This is a fun side project I&rsquo;ve recently started working on as a way to learn how to use a Wacom graphics tablet. A few weeks ago I came across some of my childhood sketchbooks and had the idea to recreate them in Adobe Illustrator. I am a new owner of a graphics tablet and have been enjoying my time learning the tablet&rsquo;s various capabilities.</p>
 
-<p>&ndash;</p>
+<p><strong>Under Construction</strong></p>
 
-<p>I hope to continue this project in the coming months when I find free time between finishing up my undergraduate degree and applying for jobs. For the time being, I hope you enjoy these <strong>quite wacky</strong> childhood drawings.</p>
+<p>I</p>
 
 <p><img src="/img/portfolio/drawings/D1a.png" alt="d1" />
 <img src="/img/portfolio/drawings/D1b.jpg" alt="d1b" /></p>
@@ -163,6 +163,28 @@
 
 <p><img src="/img/portfolio/drawings/D18a.png" alt="d18" />
 <img src="/img/portfolio/drawings/D18b.jpg" alt="d18b" /></p>
+
+<ol>
+<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+<li>Aliquam tincidunt mauris eu risus.</li>
+</ol>
+
+<blockquote>
+<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+</blockquote>
+
+<h2 id="header-level-2">Header Level 2</h2>
+
+<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+
+<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+
+<ul>
+<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+<li>Aliquam tincidunt mauris eu risus.</li>
+</ul>
+
+<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
          
       </div>
     </div>
