--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -112,6 +112,17 @@ mayoral mentions word clouds, and establishing a consistent color scheme and sty
 <blockquote>
 <h2 id="https-hmccarth-github-io-msp-mayors"><em><a href="https://hmccarth.github.io/MSP-Mayors/">https://hmccarth.github.io/MSP-Mayors/</a></em></h2>
 </blockquote>
+
+<p>Here are a few examples from our project:</p>
+
+<p><img src="/img/portfolio/mayorsdesign.png" alt="Style" />
+Mayoral Style Guide</p>
+
+<p><img src="/img/portfolio/text.png" alt="Text" />
+Questions and Context</p>
+
+<p><img src="/img/portfolio/tfidf.png" alt="tfidf" />
+tf-idf analysis (this analysis takes a list of words and determines the prevalence and uniqueness of those words)</p>
          
       </div>
     </div>
