--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,6 +33,17 @@
   <link href="/portfolio/index.xml" rel="feed" type="application/rss+xml" title="Henry McCarthy" />
 
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-133605141-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
 </head>
 <body>
   <div id="all">
