--- a/about/index.html
+++ b/about/index.html
@@ -126,6 +126,8 @@ if (!doNotTrack) {
 
 <p><img src="/img/mestand.jpg" alt="This is me" /></p>
 
+<p>Beyond the classroom and workplace, I enjoy spending my free time playing the bagpipes, exploring new restaurants in the Twin Cities, doodling, running/hiking, and listening to podcasts.</p>
+
       </div>
     </div>
   </div>
