updated text sections

--- a/portfolio/fireinfographic/index.html
+++ b/portfolio/fireinfographic/index.html
@@ -115,11 +115,11 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>California on Fire: Continued Learning in Fire Ecology and Adobe InDesign</h1>
-         <p>While in an Ecology class this semester, I spearheaded the creation of an infographic for a group project on fire ecology. Using some sources that I was already familiar with from my fire ecology story map (such as the San Francisco Chronicle Wildfire Tracker), I was able to create a spread that offered additional information on fire ecology.</p>
+         <p>While in an Ecology class in the spring of 2019, I spearheaded the creation of an infographic for a group project on fire ecology. Using some sources that I was already familiar with from my fire ecology story map (such as the San Francisco Chronicle Wildfire Tracker), I was able to create a poster that offered additional information on fire ecology.</p>
 
 <p><img src="/img/portfolio/FireInfographicPort.png" alt="Fire Infographic" /></p>
 
-<p>To create the map, I took screenshots of the Chronicle&rsquo;s Wildfire Tracker and then georectified the images in ArcMap to create point features for each fire. I created graduated symbols to represent each fire and classified them based on acres burned. Finally, I calculated population density of California counties and underlaid those measurements behind the fire symbols.</p>
+<p>To create the map, I took screenshots of the Chronicle&rsquo;s Wildfire Tracker and then georeferenced the images in ArcMap to create point features for each fire. I created graduated symbols to represent each fire and classified them based on acres burned. Finally, I calculated population density of California counties and underlaid those measurements behind the fire symbols.</p>
          
       </div>
     </div>
