--- a/portfolio/work3/index.html
+++ b/portfolio/work3/index.html
@@ -115,13 +115,15 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>A Bagpiper&#39;s Guide to the US: Exploring Spatial and Gender Patterns in the Pipe Band Community</h1>
-         <p>I have been playing bagpipes for upwards of ten years and I have often found that when I talk to non-piping friends about my experience playing in a pipe band, they are usually surprised that a pipe band has more than just bagpipers in it. Following countless conversations in the same vein and wanting to put numbers to demographic disparities I have noticed in the pipe band community over the past few years, I decided to create a visualization.</p>
+         <p>I have been playing bagpipes for more than ten years and I have often found that when I talk to non-piping friends about my experience playing in a pipe band, they are usually surprised that a pipe band has more than just bagpipers in it. Following countless conversations in the same vein and wanting to put numbers to demographic disparities I have noticed in the pipe band community over the past few years, I decided to create a visualization.</p>
 
 <p><img src="/img/portfolio/PipeBands.jpg" alt="Bagpipes" /></p>
 
 <p>I created this visualization in Adobe InDesign and incorporated graphics, charts, and a map from a variety of platforms and data sources. I designed the graphics for this visualization in Adobe Illustrator, created the pipe band map using ESRI’s ArcMap, used RAWGraphs and Adobe Illustrator to make and reorganize the bubble chart, and created the stacked bar plot in RStudio.</p>
 
-<p>Prior to making this visualization, I had little to no experience using RAWGraphs or RStudio. Making this layout has sharpened my data collection, data wrangling, analysis, and design skills.</p>
+<p>Prior to making this visualization, I had little to no experience using RAWGraphs or RStudio. Making this layout helped sharpened my data collection, data wrangling, analysis, and design skills.</p>
+
+<p>(This poster was created in the fall of 2018 and does not fully reflect the current grade levels of certain pipe bands.)</p>
          
       </div>
     </div>
