--- a/portfolio/twitteranalysis/index.html
+++ b/portfolio/twitteranalysis/index.html
@@ -115,7 +115,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Getting Sentimental: An Analysis of Twin Cities Tweets and Headlines</h1>
-         <p>As a final project for my Intro to Data Science course I worked with four other students to analyze tweets and news headlines that mention Mayors Melvin Carter and Jacob Frey of St. Paul and Minneapolis, respectively. This was an exciting project that allowed me to expand my data wrangling and visualization skills using RStudio.</p>
+         <p>As a final project for my Intro to Data Science course, I worked with four other students to analyze tweets and news headlines that mention Mayors Melvin Carter and Jacob Frey of St. Paul and Minneapolis, respectively. This was an exciting project that allowed me to expand my data wrangling and visualization skills using RStudio.</p>
 
 <p>Below is the link to our final project submission. I worked primarily on Star Tribune headline wordclouds and barcharts, tf-idf analysis of Star Tribune and Twitter data,
 mayoral mentions word clouds, and establishing a consistent color scheme and style throughout.</p>
