--- a/portfolio/work10/index.html
+++ b/portfolio/work10/index.html
@@ -115,7 +115,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Defining a Style</h1>
-         <p>This was one of my favorite assignments from my Advanced Cartography and Geovisualization class last semester. We were instructed to create a style sheet for just about anything, so having a bit of experience creating my TNC Mongolia brochure I decided to further develop what I envisioned the National Parks &ldquo;style&rdquo; to be.</p>
+         <p>This was one of my favorite assignments from the Advanced Cartography and Geovisualization class I took in the fall of 2018. We were instructed to create a style sheet for just about anything, so having a bit of experience creating my TNC Mongolia brochure, I decided to further develop what I envisioned the National Parks &ldquo;style&rdquo; to be.</p>
 
 <p><img src="/img/portfolio/NPS_StyleSheet2.jpg" alt="StyleSheet" /></p>
 
