--- a/portfolio/work3/index.html
+++ b/portfolio/work3/index.html
@@ -123,7 +123,7 @@ if (!doNotTrack) {
 
 <p>Prior to making this visualization, I had little to no experience using RAWGraphs or RStudio. Making this layout helped sharpened my data collection, data wrangling, analysis, and design skills.</p>
 
-<p>(This poster was created in the fall of 2018 and does not fully reflect the current grade levels of certain pipe bands.)</p>
+<p><em>(This poster was created in the fall of 2018 and does not fully reflect the current grade levels of certain pipe bands.)</em></p>
          
       </div>
     </div>
