--- a/portfolio/work4/index.html
+++ b/portfolio/work4/index.html
@@ -115,15 +115,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Urban GIS: Northside Achievement Zone</h1>
-         <p>One of the most meaningful classes I&rsquo;ve taken at Macalester is Urban GIS. The semester that I took Urban GIS our class partnered with the Northside Achievement Zone (NAZ) and produced a report to help inform decision-making and illustrate spatial trends in North Minneapolis.</p>
-
-<h2 id="macalester-urban-gis-website"><strong>Macalester Urban GIS Website</strong></h2>
-
-<p><em>(this site has had a few issues recently and may not be available at the moment):</em></p>
-
-<blockquote>
-<h2 id="https-www-macurbangis-org"><em><a href="https://www.macurbangis.org">https://www.macurbangis.org</a></em></h2>
-</blockquote>
+         <p>One of the most meaningful classes I took while at Macalester was Urban GIS. The semester that I took Urban GIS our class partnered with the Northside Achievement Zone (NAZ) and produced a report to help inform decision-making and illustrate spatial trends in North Minneapolis.</p>
 
 <h2 id="northside-achievement-zone-website"><strong>Northside Achievement Zone Website:</strong></h2>
 
