--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -117,7 +117,7 @@ if (!doNotTrack) {
          <h1>Dengue Risk Assessment on the Island of Hawaii</h1>
          <p>Macalester College / Advanced Geospatial Analysis / Spring 2018</p>
 
-<p>Last spring I was part of a class that set out to create a risk model of dengue fever on the Island of Hawai&rsquo;i. Following the methods of existing scholarship on the dengue outbreak in Hawai&rsquo;i during the early 2000s, our class created a model for mosquito/vector habitat based on the 2015-2016 outbreak.</p>
+<p>In the spring of 2018 I was part of a class that set out to create a risk model of dengue fever on the Island of Hawai&rsquo;i. Following the methods of existing scholarship on the dengue outbreak in Hawai&rsquo;i during the early 2000s, our class created a model for mosquito/vector habitat based on the 2015-2016 outbreak.</p>
 
 <p>This exercise in model building was extremely informative for us as a class and for me individually. This semester-long project saw us navigate a project from its early stages to a final, presentable format. I enjoy this style of class because it lets students work on many aspects of a single project &ndash; in my case, I worked on collecting climate data towards the beginning of the semester and on the design team towards the end.</p>
 
