--- a/portfolio/work6/index.html
+++ b/portfolio/work6/index.html
@@ -115,7 +115,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>The Nature Conservancy - Grassland and Stream Surveys</h1>
-         <p>This past summer I had an exciting internship with The Nature Conservancy which allowed me to pursue my environmental and GIS interests while gaining valuable field experience.</p>
+         <p>In the summer of 2018 I had an exciting internship with The Nature Conservancy which allowed me to pursue my environmental and GIS interests while gaining valuable field experience.</p>
 
 <p><img src="/img/portfolio/TNC_Summer.jpg" alt="poster" /></p>
 
