--- a/portfolio/work9/index.html
+++ b/portfolio/work9/index.html
@@ -115,11 +115,11 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Doodles Revisited: Getting to Know the Wacom Intuos Graphics Tablet</h1>
-         <p>This is a fun side project I&rsquo;ve recently started working on as a way to learn how to use a Wacom graphics tablet. A few weeks ago I came across some of my childhood sketchbooks and had the idea to recreate them in Adobe Illustrator. I am a new owner of a graphics tablet and have been enjoying my time learning the tablet&rsquo;s various capabilities.</p>
+         <p>This is a fun side project I&rsquo;ve taken on as a way to familiarize myself with a Wacom graphics tablet. During a visit back to my family in San Diego, I came across some of my childhood sketchbooks and had the idea to recreate my doodles in Adobe Illustrator. I am a new owner of a graphics tablet and have been enjoying my time learning the tablet&rsquo;s various capabilities.</p>
 
 <p>&ndash;</p>
 
-<p>I hope to continue this project in the coming months when I find free time between finishing up my undergraduate degree and applying for jobs. For the time being, I hope you enjoy these <strong>quite wacky</strong> childhood drawings.</p>
+<p>I hope to continue this project here and there when I find free time outside of work. For the time being, I hope you enjoy these <strong>quite wacky</strong> childhood drawings.</p>
 
 <p><img src="/img/portfolio/drawings/D1a.png" alt="d1" />
 <img src="/img/portfolio/drawings/D1b.jpg" alt="d1b" /></p>
