--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -115,7 +115,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Brushing Up and Starting Fresh: Esri Story Maps, Adobe Animate, and Fire Ecology</h1>
-         <p>In my Advanced Cartography and Geovisualization class this past semester I was tasked with creating a dynamic visualization using a new or somewhat unfamiliar platform. Interested in learning about animation in Adobe, I decided to create a series of short animations to illustrate concepts in fire ecology (a field that I have long been curious about but have not studied in detail). Wanting to stay up to date with Esri Story Maps, I decided to use this as a platform to host my animations.</p>
+         <p>One of my favorite classes at Macalester was Advanced Cartography and Geovisualization. For one of the assignments, I was tasked with creating a dynamic visualization using a new or somewhat unfamiliar platform. Interested in learning about animation in Adobe, I decided to create a series of short animations to illustrate concepts in fire ecology (a field that I have long been curious about but have not studied in detail). Wanting to stay up to date with Esri Story Maps, I decided to use this as a platform to host my animations.</p>
 
 <p>Below is the link to my final dynamic visualization submission. I am proud of the progress I made using Adobe Animate and I&rsquo;m excited to use this skill for future projects both academic and professional. In particular, I would like to revisit animated cartography and see how I could expand beyond my 2018 California wildfires map.</p>
 
