added new piece

--- a/contact/index.html
+++ b/contact/index.html
@@ -118,7 +118,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Get in touch</h1>
-         <p>Feel free to email me at <strong>hmccarth@macalester.edu</strong></p>
+         <p>Feel free to email me at <strong>henry.k.mccarthy@gmail.com</strong></p>
 
          <h4>You can find me also on:</h4>
          <p class="social social--big">
