--- a/portfolio/metcouncil/index.html
+++ b/portfolio/metcouncil/index.html
@@ -115,7 +115,7 @@ if (!doNotTrack) {
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Water Supply Planning at the Met Council</h1>
-         <p>In the summer of 2018 I had an exciting internship with The Nature Conservancy which allowed me to pursue my environmental and GIS interests while gaining valuable field experience.</p>
+         <p>Since June of 2019, I have been an intern in the Water Supply Planning unit of the Metropolitan Council of the Twin Cities.</p>
 
 <p><img src="/img/portfolio/MetCouncil_Poster_Portfolio.png" alt="poster" /></p>
 
