--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -449,7 +449,7 @@ To create the map, I took screenshots of the Chronicle&rsquo;s Wildfire Tracker 
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>Write text about cultural atlas production and put it hereeee</p>
+                                  <p>The text for this page is in progress!</p>
                                 
                             </p>
                           </div>
