--- a/portfolio/metcouncil/index.html
+++ b/portfolio/metcouncil/index.html
@@ -117,13 +117,9 @@ if (!doNotTrack) {
          <h1>Water Supply Planning at the Met Council</h1>
          <p>Since June of 2019, I have been an intern in the Water Supply Planning unit of the Metropolitan Council of the Twin Cities.</p>
 
+<p>The text for this page is in progress!</p>
+
 <p><img src="/img/portfolio/MetCouncil_Poster_Portfolio.png" alt="poster" /></p>
-
-<p>At the end of the summer, I wrote an essay reflecting on my time with the wonderful people at TNC Minnesota, North Dakota, South Dakota. This essay can be found below:</p>
-
-<p>&ndash;</p>
-
-<p><strong>I first became interested in spending this summer with The Nature Conservancy while I was studying abroad in Mongolia during the fall semester of 2017.</strong> As part of my study abroad program, I had the opportunity to spend a month working for The Nature Conservancy in Ulaanbaatar, the capital of Mongolia. After an enjoyable month that went by all too quickly, I decided that I wanted to continue to work for TNC when I returned to the United States. After a busy semester and a slew of internship applications, I happily began an internship with The Nature Conservancy’s Minnesota – North Dakota – South Dakota chapter thanks to the Macalester Summer Internship Grant program. For the next ten weeks, I would be a Grassland and Freshwater Restoration Intern, and I would be driving around the Dakotas and Minnesota more than I could have imagined.</p>
          
       </div>
     </div>
